FC-36 Add list informations to GetList endpoint and refactor (#16)
* feat: Merge list data with flashcards list

* feat: Refactor and migrate single List endpoint from flashcards to lists api
