# src/swagger/lists.yaml
@@ -1,37 +1,9 @@
 paths:
-  /lists/create:
-    # [POST] Create list
-    post:
-      tags:
-        - list
-      summary: Create list
-      parameters:
-        - name: body
-          in: body
-          description: list name
-          required: true
-          schema:
-            $ref: '#/definitions/createList'
-      responses:
-        201:
-          description: 'Created'
-          content:
-            application/json:
-              schema:
-                $ref: '#/responses/list'
-        400:
-          description: 'Bad Request'
-        401:
-          description: 'Unauthorized'
-        403:
-          description: 'Forbidden'
-        500:
-          description: 'Server Error'
-  /lists/user-lists:
+  /lists:
     # [GET] Get lists
     get:
       tags:
-        - list
+        - lists
       summary: Get lists
       parameters:
         - in: query
@@ -63,7 +35,86 @@ paths:
                 type: array
                 items:
                   allOf:
-                    - $ref: '#/responses/userLists'
+                    - $ref: '#/responses/getLists'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        500:
+          description: 'Server Error'
+  /lists/{listID}:
+    # [GET] Get list of flashcards
+    get:
+      tags:
+        - lists
+      summary: Get list of flashcards
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: integer
+        - in: query
+          name: skip
+          schema:
+            type: integer
+        - in: query
+          name: sort
+          schema:
+            type: string
+        - in: query
+          name: sortBy
+          schema:
+            type: string
+        - in: query
+          name: forwardText
+          schema:
+            type: string
+        - in: query
+          name: backwardText
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'OK'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  allOf:
+                    - $ref: '#/responses/getList'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        404:
+          description: 'Not Found'
+        500:
+          description: 'Server Error'
+  /lists/create:
+    # [POST] Create list
+    post:
+      tags:
+        - lists
+      summary: Create list
+      parameters:
+        - name: body
+          in: body
+          description: list name
+          required: true
+          schema:
+            $ref: '#/definitions/createList'
+      responses:
+        201:
+          description: 'Created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/responses/list'
         400:
           description: 'Bad Request'
         401:
@@ -99,26 +150,38 @@ responses:
         type: string
       __v:
         type: integer
-  userLists:
+  getLists:
     type: object
     properties:
       data:
         type: array
         items:
-          type: object
-          properties:
-            _id:
-              type: string
-            name:
-              type: string
-            userID:
-              type: string
-            createdAt:
-              type: string
-            updatedAt:
-              type: string
-            __v:
-              type: integer
+          $ref: '#/responses/list'
+      count:
+        type: integer
+      skip:
+        type: integer
+      limit:
+        type: integer
+  getList:
+    type: object
+    properties:
+      _id:
+        type: string
+      name:
+        type: string
+      userID:
+        type: string
+      createdAt:
+        type: string
+      updatedAt:
+        type: string
+      __v:
+        type: integer
+      data:
+        type: array
+        items:
+          $ref: '#/responses/flashcard'
       count:
         type: integer
       skip:
